fixed overflowed navbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -157,9 +157,9 @@ main > main-center {
 }
 
 main > main-left, main > main-right {
-  flex: 0px 0px 0px;
   width: 0;
   visibility: hidden;
+  display: none;
 }
 
 main > main-left {
@@ -174,6 +174,7 @@ main > main-left {
   main > main-right {
     flex: 0 0 20vw;
     visibility: visible;
+    display: initial;
   }
 }
 
